--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -15,11 +15,11 @@
     </tr>
     </thead>
     <tbody>
-    <div class="ui bulleted list">
-    #{list items:todolist, as:'todo'}
-    <tr>
-      <td> ${todo.title} </td>
-    #{/list}
+      #{list items:todolist, as:'todo'}
+      <tr>
+        <td> ${todo.title} </td>
+        <td> <a href="/dashboard/deletetodo/${todo.id} " class="ui tiny red button"> Delete </a> </td>
+      #{/list}
     </div>
     </tbody>
   </table>
@@ -32,4 +32,5 @@
     <input placeholder="Title" type="text" name="title">
   </div>
   <button class="ui blue submit button">Add Todo</button>
+  
 </form>
